# manuscript-ocr

./: BPE_ANALYSIS_REPORT.md  DEPLOYMENT.md  Dockerfile  README.md  architecture_benchmark_results.json  benchmark_lanms.py  check_unet_size.py  compare_pth_onnx_full.py  demo_block_visualization.py  docker-compose.yml  example_device_config.py  pyproject.toml  pytest.ini  reexport_onnx.py  results.json  test_blocks_visualization.py  test_bpe_tokenizer.py  test_encoder_type.py  test_num_encoder_layers.py  test_visualization.py
.github/workflows/: docs.yml  test_install.yml
docs/: BENCHMARK copy.md  BENCHMARK.md  DATA_MODEL.md  DETECTOR.md  PIPELINE_API.md  VISUALIZATION.md  VISUALIZATION_QUICK.md  build_docs.bat
docs/sphinx/: conf.py  getting_started.rst
notebooks/: Пример_инференса_детектора.ipynb  Пример_обучения_детектора_новый.ipynb
scripts/: README.md  convert_old_trba_weights.py  east_infer_speed_test.py  east_infer_test.py  example_evaluate_detector.py  export_east_to_onnx.py  export_trba_to_onnx.py  optimize_east_params copy.py  optimize_east_params.py  trba_infer_speed_test.py
src/: Essays_metrics.md  analyze_model_size.py  compare_pth_onnx_full.py  compare_pytorch_onnx.py  debug_preprocessing.py  debug_pth_vs_onnx.py  east_infer.py  export_east_to_onnx.py  infer_east.py  infer_pipeline copy.py  infer_pipeline.py  infer_pipeline_essays copy.py  infer_pipeline_essays.py  infer_trba.py  pipline_infer.py  t.py  test_space_token.py  trba_infer copy.py  trba_infer.py  trba_metrics.py  trba_metrics_pytorch.py  trba_pth_inference_with_metrics.py  trba_validation_from_training.py  Пример_обучения_детектора_новый.ipynb  Пример_обучения_распознавателя_новый.ipynb
src/manuscript/: __init__.py  _pipeline.py
tests/: _test_pipeline.py  conftest.py  test_detector_docs.py  test_installation.py  test_pipeline_api_compatibility.py  test_recognizer_docs.py  test_sorting.py
tests/api/: __init__.py  test_base.py
tests/data/: __init__.py  test_structures.py
(+192 files in other folders)
