[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manuscript-ocr"
version = "0.1.8"
description = "End-to-end OCR: text detection (EAST) + recognition (TRBAModel-OCR)"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ email = "sherstpasha99@gmail.com" }]
urls = { Homepage = "https://github.com/konstantinkozhin/manuscript-ocr" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "onnxruntime>=1.16.0,<2.0.0",
    "torch>=1.11.0,<2.8.0",
    "torchvision>=0.12.0,<0.23.0",
    "torchaudio>=0.11.0,<2.8.0",
    "numpy>=1.19.0,<2.3.0",
    "opencv-python>=4.5.0,<5.0.0",
    "Pillow>=8.0.0",
    "pandas>=1.3.0,<3.0.0",
    "shapely>=1.8.0,<3.0.0",
    "numba>=0.56.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "gdown>=4.4.0,<6.0.0",
    "scikit-image>=0.19.0,<1.0.0",
    "torch-optimizer>=0.1.0,<1.0.0",
    "python-Levenshtein>=0.12.0,<1.0.0",
    "jiwer>=2.3.0,<4.0.0",
    "matplotlib>=3.3.0,<4.0.0",
    "tqdm>=4.60.0,<5.0.0",
    "albumentations>=1.0.0,<2.0.0",
    "tensorboard>=2.4.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "isort>=5.10.0",
    "mypy>=0.991",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "build>=0.8.0",
    "twine>=4.0.0",
]

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
